--- a/css/style.css
+++ b/css/style.css
@@ -8,83 +8,106 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/CascadeStyleSheet.css to ed
 */
 
 
-
 header{
     background-color: grey;
-    height: 100px;
+    height: 80px;
     text-align: center;
-    
 }
 
 body{
     background-color: black;
-    font-size: 20px;
     color: white;
     background-image: url("../media/space.jpg");
 }
 
+p{
+    margin: 10px 10px 10px 10px;
+}
+
 .logoshow{
-    height: 100px;
+    height: 80px;
     width: auto;
     float: left;
 }
 
-
-
 .menu-options {
-    
+        margin-top: 0em;
 }
 
 .menu-options ul {
 
-    font-size: 25px;
-
+    
+    padding-top: 25px;
 }
 
 .menu-options ul li {
 
     display: inline;
-    margin-left: 50px;
-
 }
 
 .menu-options a {
-    margin-top: 50px;
-    color: yellow;
-
+    font-size: 25px;
+    color: lightskyblue;
+    margin-left: 50px;
 }
 
 .container {
 
-    margin: 0 auto;
+    margin: 0;
     justify-content: start;
     align-items: center;
 
-
 }
+
+.description {
+    font-size: 18px;
+    margin-top: 20px;
+    margin-right: 200px;
+    margin-left: 200px;
+    text-align: left;
+    
+}
+
 
 .title{
     font-size: 25px;
     text-align: center;
-    
+    margin-top: 20px;
 }
+
+.special{
+    font-size: 25px;
+    text-align: center;
+    margin-top: 20px;
+    color: red;
+}
+
 
 .imageshow{
-    height: 300px;
+    height: 200px;
     width: auto;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
+.imageshowspecial{
+    height: 400px;
+    width: auto;
+    border: 6px solid green;
+    border-radius: 6px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
 
 /* setting footer at bottom of screen and setting width to 95 to eliminate scrool bars*/
 footer { 
-    clear: both;
-    padding: 20px 0;
     position: absolute;
     font-size: 18px;
     color: white;
-    width : 95%;
+    width : 70%;
     text-align: center;
     bottom : 0;
-    
 }
 
