--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/CascadeStyleSheet.css to ed
 */
 /* 
     Created on : Oct. 20, 2022, 12:34:23 p.m.
-    Author     : darth
+    Author     : Jean-Marc Arsenault
 */
 
 
