--- a/css/style.css
+++ b/css/style.css
@@ -70,11 +70,24 @@ td {
     display: inline;
 }
 
+.menu-options a:link { text-decoration: none; }
+
+.menu-options a:visited { text-decoration: none; }
+
+
 .menu-options a {
     font-size: 25px;
     color: lightskyblue;
     margin-left: 50px;
+    text-decoration: none;
+
 }
+
+
+
+.menu-options a:hover { text-decoration: none; }
+
+.menu-options a:active { text-decoration: none; }
 
 .container {
 
